# LAB-PROJETO-GENAI

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requests.http  requirements.txt
app/api/: dependencies.py  main.py
app/api/routes/: prompt_routes.py
app/application/contracts/: prompt_repository.py
app/application/dto/: prompt_results.py
app/application/schemas/: prompt_schema.py
app/application/services/: priority_advisor.py  prompt_analyzer.py  prompt_service.py
app/application/use_cases/: prompt_use_cases.py
app/domain/entities/: prompt_template.py
app/domain/enums/: prompt_status.py
app/infrastructure/: database.py
app/infrastructure/models/: prompt_model.py
app/infrastructure/repositories/: prompt_repository.py
docs/: arquitetura.md  backlog.md  forum.md  roteiro-apresentacao.md
docs/arquitetura/: arquitetura.md
docs/arquitetura/diagramas/: arquitetura-sistema.md
docs/produto/: escopo-mvp.md  roteiro-apresentacao.md  roteiro-demonstracao-tecnica.md
docs/tests/: diagrama-testes.md  resultado-testes.md
frontend/: app.js  index.html  styles.css
prompts/: PROMPTS.md
tests/: test_prompts.py
