[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prompthub-ai-python"
version = "1.0.1"
description = "Sistema para cadastro, analise e priorizacao de prompts de IA."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.136.1",
    "uvicorn==0.46.0",
    "sqlmodel==0.0.38",
    "pydantic==2.11.4",
    "python-dotenv==1.2.2",
    "httpx==0.28.1",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
